# xpdf

./: .clang-format  .gitignore  Makefile.am  Makefile.common  README.md  config.hh  configure.ac  defs.hh  meson.build
doc/: Doxyfile
etc/m4/: ac_config_cxx_warnings.m4  ac_config_with_motif.m4  ac_config_with_paper.m4
fofi/: FoFiBase.cc  FoFiBase.hh  FoFiEncodings.cc  FoFiEncodings.hh  FoFiIdentifier.cc  FoFiIdentifier.hh  FoFiTrueType.cc  FoFiTrueType.hh  FoFiType1.cc  FoFiType1.hh  FoFiType1C.cc  FoFiType1C.hh  Makefile.am  meson.build
goo/: FixedPoint.cc  FixedPoint.hh  GHash.cc  GHash.hh  GList.cc  GList.hh  GMutex.hh  GString.cc  GString.hh  Makefile.am  gfile.cc  gfile.hh  gmem.cc  gmem.hh  gmempp.cc  memory.cc  memory.hh  parseargs.cc  parseargs.hh  unique_resource.hh
iostreams/: Makefile.am  array_source.hh  asciihex_input_filter.hh  asciihex_output_filter.hh  container_sink.hh  container_source.hh  stream.hh  stream_fwd.hh
splash/: Makefile.am  Splash.cc  Splash.hh  SplashBitmap.cc  SplashBitmap.hh  SplashClip.cc  SplashClip.hh  SplashErrorCodes.hh  SplashFTFont.cc  SplashFTFont.hh  SplashFTFontEngine.cc  SplashFTFontEngine.hh  SplashFTFontFile.cc  SplashFTFontFile.hh  SplashFont.cc  SplashFont.hh  SplashFontEngine.cc  SplashFontEngine.hh  SplashFontFile.cc  SplashFontFile.hh  SplashFontFileID.cc  SplashFontFileID.hh  SplashGlyphBitmap.hh  SplashMath.hh  SplashPath.cc  SplashPath.hh  SplashPattern.cc  SplashPattern.hh  SplashScreen.cc  SplashScreen.hh  SplashState.cc  SplashState.hh  SplashTypes.hh  SplashXPath.cc  SplashXPath.hh  SplashXPathScanner.cc  SplashXPathScanner.hh  meson.build
test/: Makefile.am  array_iterator.cc  asciihex_filter.cc  box_rotate.cc  box_segment.cc
utils/: GHash.cc  GHash.hh  GList.cc  GList.hh  GString.cc  GString.hh  Makefile.am  gfile.cc  gfile.hh  memory.cc  memory.hh  meson.build  parseargs.cc  parseargs.hh  path.cc  path.hh  string.cc  string.hh
xpdf/: AcroForm.cc  AcroForm.hh  Annot.cc  Annot.hh  Array.cc  Array.hh  ArrayIterator.hh  BuiltinFont.cc  BuiltinFont.hh  BuiltinFontTables.cc  BuiltinFontTables.hh  CMap.cc  CMap.hh  Catalog.cc  Catalog.hh  CharCodeToUnicode.cc  CharCodeToUnicode.hh  CharTypes.hh  CompactFontTables.hh  CoreOutputDev.cc  CoreOutputDev.hh  Decrypt.cc  Decrypt.hh  Dict.cc  Dict.hh  Error.cc  Error.hh  ErrorCodes.hh  FontEncodingTables.cc  FontEncodingTables.hh  Form.cc  Form.hh  Function.cc  Function.hh  Gfx.cc  Gfx.hh  GfxFont.cc  GfxFont.hh  GfxState.cc  GfxState.hh  (+151 more)
xpdf/parser/: any.cc  any.hh  array.cc  array.hh  ast.hh  character.hh  comment.cc  comment.hh  ctype.cc  ctype.hh  dict.cc  dict.hh  eol.cc  eol.hh  error.cc  error.hh  iterator_guard.hh  lit.cc  lit.hh  lookahead.cc  lookahead.hh  name.cc  name.hh  numeric.cc  numeric.hh  obj.cc  obj.hh  ref.cc  ref.hh  skip.cc  skip.hh  stream.cc  stream.hh  string.cc  string.hh  trailer.cc  trailer.hh  xref.cc  xref.hh
