# -*- mode: makefile; -*-

ACLOCAL_AMFLAGS = -I etc/m4

include $(top_srcdir)/Makefile.common

noinst_LIBRARIES = libfofi.a

libfofi_a_SOURCES =                             \
	FoFiBase.cc                                 \
	FoFiEncodings.cc                            \
	FoFiIdentifier.cc                           \
	FoFiTrueType.cc                             \
	FoFiType1.cc                                \
	FoFiType1C.cc
