# -*- mode: makefile; -*-

ACLOCAL_AMFLAGS = -I etc/m4

include $(top_srcdir)/Makefile.common

noinst_LIBRARIES = libgoo.a

libgoo_a_SOURCES =                              \
	gmem.cc                                     \
	gmempp.cc                                   \
	gfile.cc                                    \
	parseargs.cc                                \
	GHash.cc                                    \
	GList.cc                                    \
	GString.cc

