# -*- mode: makefile; -*-

ACLOCAL_AMFLAGS = -I etc/m4

include $(top_srcdir)/Makefile.common

noinst_LIBRARIES = libutils.a

libutils_a_SOURCES =                            \
	gfile.cc                                    \
	memory.cc                                   \
	parseargs.cc                                \
	GHash.cc                                    \
	GList.cc                                    \
	GString.cc

